Fixed all problems